--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
         <button type="submit" class="login-btn">LOGIN</button>
 
         <div class="social-login">
-          <p>Sign in with:</p>
           <div class="icons">
             <a href="https://www.instagram.com/olas.mc?igsh=MTZ2eTd1b2JkdWMxYg==" target="_blank">
-              <img src="asssets/img/instagram (1).png" alt="Instagram" width="20px">
+              <img src="asssets/img/instagram.png" alt="Instagram" width="20px">
             </a>
 
-            <i class="whatsapp"> <img src="asssets/img/whatsapp.png" alt="" width="20px"></i>
+            <i class="whatsapp"> <img src="asssets/img/whatsapp (2).png" alt="" width="20px"></i>
           </div>
         </div>
       </form>
